--- a/index.html
+++ b/index.html
@@ -139,6 +139,17 @@
       <p class="nome-da-comida">Vannila Pana Cotta</p>
       <p class="preco">$6.50</p>
     </div>
+
+    <dialog id="confirmDialog">
+      <form method="dialog">
+        <p>Deseja confirmar o pedido?</p>
+        <menu>
+          <button id="cancelButton">Cancelar</button>
+          <button id="confirmButton">Confirmar</button>
+        </menu>
+      </form>
+    </dialog>
+        
   </div>
 
   <div class="card">
